# project-defiant-blog

./: logging.cfg  pyproject.toml
project_defiant/: __init__.py
project_defiant/app/: app.py
tests/: test_project_defiant.py
