[tool.poetry]
name = "PROJECT-DEFIANT"
version = "0.1.0"
description = ""
authors = ["Szymon Szyszkowski <szymonszyszkowski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.14.0"
flake8 = "^4.0.1"
black = "^22.3.0"
pydantic = "^1.9.1"
mypy = "^0.960"
selenium = "^4.2.0"
celery = "^5.2.7"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
defiant = 'project_defiant:cli'
